[tool.poetry]
  project_name = "Chained In"
  name = "chained_in"
  version = "0.1.0"
  release = "pre-alpha"
  description = "LinkedIn2Latex"
  readme = "README.rst"
  author = "Pablo Woolvett <pablowoolvett@gmail.com>"
  authors = [
    "Pablo Woolvett <pablowoolvett@gmail.com>"
  ]
  maintainer = "Pablo Woolvett <pablowoolvett@gmail.com>"
  license = "MIT"
  copyright = ""
  url = "http://pwoolvett.github.io/chained_in"

[tool.poetry.scripts]
  chained_in = "chained_in.__main__:_Fire"

[tool.poetry.dependencies]
  python = "^3.6"
  fire = "^0.1.3"
  tqdm = "^4.28"
  pandas = "^0.23.4"
  Autologging = "^1.2"
  petri = {git = "https://github.com/pwoolvett/petri.git"}
requests_oauthlib = "^1.2"
requests = "^2.21"
bs4 = "^0.0.1"


[tool.poetry.dev-dependencies]
  black = { git = "https://github.com/ambv/black.git", branch = "master" }
  pytest = "^4.0"
  coverage = "^4.5"
  pytest-cov = "^2.6"
  flake8 = "^3.6"
  behave = "^1.2"
  Sphinx = "^1.8"
  sphinx_rtd_theme = "^0.4.2"
  sphinx-autodoc-typehints = "^1.5"

[build-system]
 requires = ["poetry>=0.12"]
 build-backend = "poetry.masonry.api"
